# Bang

./: LICENSE  LICENSE.txt  README.markdown  README.md  bang.py  bang.sh  config.txt  index.html  markup.bang  notes.txt  pyproject.toml  run.sh  style.css  user_manual.markdown  user_manual.txt
bang/: __init__.py  __main__.py  cli.py  markup.py
extra/: Thumbs.db
in/: body.html  example.txt  head.html  index.html  links.html  style.css
