[project]
name = "bang"
version = "2.0.0"
authors = [
  {name="BreadMakesYouFull"},
]
description = "Static website generator"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/breadmakesyoufull/bang"

[project.scripts]
bpm2fps = "bang.cli:main"
